# Search-Engine-with-AVLTrees-and-HashMaps

./: CMakeLists.txt  DSAVLTree.h  DSHashTable.h  DSMap.h  Database.cpp  Database.h  DatabaseHandler.cpp  DatabaseHandler.h  Document.h  DocumentParser.cpp  DocumentParser.h  README.md  SearchEngine.cpp  SearchEngine.h  main.cpp  rapidJSONExample.cpp
